compile_tests/expected/extern_mod.stderr
error: only "wgsl" ABI is supported
 --> compile_tests/src/extern_mod.rs:5:12
  |
5 |     extern "C" {}
  |            ^^^

error: unsupported item
 --> compile_tests/src/extern_mod.rs:8:9
  |
8 |         static STATIC: u32;
  |         ^^^^^^

error: function must have a return type
  --> compile_tests/src/extern_mod.rs:10:12
   |
10 |         fn no_return_type();
   |            ^^^^^^^^^^^^^^

error: unsupported pattern
  --> compile_tests/src/extern_mod.rs:12:44
   |
12 |         fn func_with_invalid_param_pattern((a, b): (f32, f32)) -> f32;
   |                                            ^^^^^^

error: unsupported parameter
  --> compile_tests/src/extern_mod.rs:14:27
   |
14 |         fn func_with_self(self) -> f32;
   |                           ^^^^

error: `self` parameter is only allowed in associated functions
  --> compile_tests/src/extern_mod.rs:14:27
   |
14 |         fn func_with_self(self) -> f32;
   |                           ^^^^ not semantically valid as function parameter
   |
   = note: associated functions are those in `impl` or `trait` definitions

error[E0277]: the trait bound `(f32, f32): ragna::types::GpuType` is not satisfied
  --> compile_tests/src/extern_mod.rs:12:52
   |
12 |         fn func_with_invalid_param_pattern((a, b): (f32, f32)) -> f32;
   |                                                    ^^^^^^^^^^ the trait `ragna::types::GpuType` is not implemented for `(f32, f32)`
   |
   = help: the following other types implement trait `ragna::types::GpuType`:
             bool
             f32
             i32
             u32

error[E0308]: mismatched types
  --> compile_tests/src/extern_mod.rs:12:44
   |
12 |         fn func_with_invalid_param_pattern((a, b): (f32, f32)) -> f32;
   |                                            ^^^^^^  ---------- expected due to this
   |                                            |
   |                                            expected `Gpu<(f32, f32), ...>`, found `(_, _)`
   |
   = note: expected struct `Gpu<(f32, f32), impl ::std::any::Any>`
               found tuple `(_, _)`
